# todo-actix

./: .gitignore  Cargo.toml  state.json
src/: main.rs  playground.rs  state.rs
src/todo/traits/: create.rs  delete.rs  edit.rs
src/views/: mod.rs
src/views/auth/: mod.rs
src/views/todo/: create.rs  mod.rs
